tests/ui/04-section-in-closure.rs
fn main() {}

#[rye::test_case]
fn section_in_closure() {
    std::convert::identity(|| {
        section!("section", {
            assert!(true);
        });
    });
}
